--- a/base/deployment.yml
+++ b/base/deployment.yml
@@ -2,11 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: goapp
+  labels:
+    app: goapp
 spec:
   replicas: 1
   selector:
     matchLabels:
       deployment: goapp
+      app: goapp
   template:
     metadata:
       labels:
