--- a/ovelays/dev/dev-service.yml
+++ b/ovelays/dev/dev-service.yml
@@ -1,5 +1,11 @@
 apiVersion: v1
 kind: Service
+metadata:
+  name: goapp
+  labels:
+    app: goapp
 spec:
+  ports:
+    - port: 8080
   selector:
-    app: dev-goapp
+    app: goapp
