--- a/ovelays/dev/kustomization.yml
+++ b/ovelays/dev/kustomization.yml
@@ -1,10 +1,8 @@
 namePrefix: dev-
 namespace: dev
 commonLabels:
-  app: dev-goapp
-
-metadata:
-  name: dev-goapp
+  environment: dev
+  
 
 resources:
 - ../../base/
